# hivewiki-web

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  flake.nix  pyproject.toml
.github/workflows/: trivy.yml
apps/accounts/: context_processors.py  decorators.py  forms.py  middleware.py  models.py  services.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_oauthaccount.py
apps/accounts/tests/: test_auth_flow.py
apps/core/: urls.py  views.py
config/: settings.py  urls.py
static/css/: app.css
static/js/: app.js
templates/: base.html
templates/layouts/: app.html  auth.html  public.html
templates/pages/auth/: login.html  signup.html
templates/pages/community/: list.html
templates/pages/home/: dashboard.html  public_main.html
templates/pages/search/: results.html
templates/pages/user/: mypage.html  password_change.html  profile_edit.html
templates/pages/wiki/: search_home.html
templates/partials/: auth_field.html  empty_state.html  feature_panel.html  flash.html  form_errors.html  oauth_buttons.html  post_card.html  search_bar.html  search_results.html  section_header.html  sidebar.html  stat_tile.html  topbar.html  wiki_card.html
