[project]
name = "hivewiki-web"
version = "0.1.0"
description = "Web application for the HiveWiki project built with Django"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = ["django>=5.2,<6.0"]

[dependency-groups]
dev = ["pre-commit>=4.5.1"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
