[project]
name = "hivewiki-web"
version = "0.1.0"
description = "Web application for the HiveWiki project built with Django"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "django>=5.2.13,<6.0",
    "django-environ>=0.13.0",
    "django-htmx>=1.27.0",
    "django-redis>=6.0.0",
    "django-tailwind>=4.4.2",
    "psycopg[binary]>=3.3.3",
    "uvicorn>=0.42.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = ["pre-commit>=4.5.1"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
